--- a/package.json
+++ b/package.json
@@ -54,15 +54,24 @@
       "last 1 safari version"
     ]
   },
-  "build":{
-    "appId":"com.example.simulador",
+  "build": {
+    "appId": "com.example.simulador",
     "productName": "Simulador de procesos"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
     "autoprefixer": "^10.4.2",
     "concurrently": "^7.0.0",
     "electron": "^17.0.0",
     "electron-builder": "^22.14.5",
+    "eslint": "^8.14.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.18",
     "wait-on": "^6.0.0"
